grammar.js
    compilation_unit: ($) => seq(optional($.shebang_directive), repeat($._top_level_item)),

    _top_level_item: ($) => prec(2, choice($._top_level_item_no_statement, $.global_statement)),

    attribute: ($) => seq(field('name', $._name), optional($.attribute_argument_list)),

    attribute_list: ($) => seq('[', optional($.attribute_target_specifier), commaSep1($.attribute), optional(','), ']'),

    _attribute_list: ($) => choice($.attribute_list, $.preproc_if_in_attribute_list),

    // Higher precedence than `_reserved_identifier`: when both interpretations
    // are valid (e.g. `[field :` could be `_reserved_identifier` followed by
    // bogus `:`, or `attribute_target_specifier`), prefer the target-specifier
    // reading. `_reserved_identifier` still wins when no `:` follows, so
    // `[field]` continues to parse as collection_expression with identifier.
    namespace_declaration: ($) =>
      seq('namespace', field('name', $._name), field('body', $.declaration_list), $._optional_semi),

    class_declaration: ($) => seq($._class_declaration_initializer, $._declaration_list_body),

    _class_declaration_initializer: ($) =>
      seq(
        repeat($._attribute_list),
        repeat($.modifier),
        'class',
        field('name', $.identifier),
        repeat(choice($.type_parameter_list, $.parameter_list, $.base_list)),
        repeat($.type_parameter_constraints_clause)
      ),

    interface_declaration: ($) => seq($._interface_declaration_initializer, $._declaration_list_body),

    _interface_declaration_initializer: ($) =>
      seq(
        repeat($._attribute_list),
        repeat($.modifier),
        'interface',
        field('name', $.identifier),
        field('type_parameters', optional($.type_parameter_list)),
        optional($.base_list),
        repeat($.type_parameter_constraints_clause)
      ),

    _declaration_list_body: ($) => choice(seq(field('body', $.declaration_list), $._optional_semi), ';'),

    modifier: () =>
      prec.right(
        choice(
          'abstract',
          'async',
          'const',
          'extern',
          'file',
          'fixed',
          'internal',
          'new',
          'override',
          'partial',
          'private',
          'protected',
          'public',
          'readonly',
          'required',
          // 'ref',     // `ref` as a modifier can only be used on struct declarations. Other than that it's a ref type or a ref parameter in a declaration.
          // 'scoped',  // `scoped` is either part of a scoped type or a scoped parameter. Both of which are handled outside of `modifier`.
          'sealed',
          'static',
          'unsafe',
          'virtual',
          'volatile'
        )
      ),

    type_parameter_list: ($) => seq('<', commaSep1($.type_parameter), '>'),

    type_parameter: ($) => seq(repeat($._attribute_list), optional(choice('in', 'out')), field('name', $.identifier)),

    type_parameter_constraints_clause: ($) => seq('where', $.identifier, ':', commaSep1($.type_parameter_constraint)),

    type_parameter_constraint: ($) =>
      choice(
        seq('class', optional('?')),
        'struct',
        'notnull',
        'unmanaged',
        $.constructor_constraint,
        field('type', $.type)
      ),

    declaration_list: ($) => seq('{', repeat($.declaration), '}'),

    method_declaration: ($) => seq($._method_signature, $._function_body),

    conditional_method_declaration: ($) => seq(alias($.preproc_if_in_method_signature, $.preproc_if), $._function_body),

    method_signature: ($) => $._method_signature,

    _method_signature: ($) =>
      seq(
        repeat($._attribute_list),
        repeat($.modifier),
        field('returns', $.type),
        optional($.explicit_interface_specifier),
        field('name', $.identifier),
        field('type_parameters', optional($.type_parameter_list)),
        field('parameters', $.parameter_list),
        repeat($.type_parameter_constraints_clause)
      ),

    parameter_list: ($) => seq('(', sep(choice($.parameter, $._parameter_array), ','), ')'),

    // `ref`, `out`, and `in` stay out of the repeat: reducing the repeat after them would compete with the shift of
    // the next token into an argument (`(ref x)`), whose precedence wins, so `(ref int i) =>` would read `ref int` as a
    // ref_type while a method's `(ref int i)` reads `ref` as a modifier.
    _parameter_type_with_modifiers: ($) =>
      seq(
        repeat(prec.left(alias(choice('this', 'scoped', 'readonly'), $.modifier))),
        optional(
          seq(
            alias(choice('ref', 'out', 'in'), $.modifier),
            repeat(prec.left(alias(choice('this', 'readonly'), $.modifier)))
          )
        ),
        field('type', $.type)
      ),

    parameter: ($) =>
      seq(
        repeat($._attribute_list),
        optional($._parameter_type_with_modifiers),
        field('name', $.identifier),
        optional(seq('=', $.expression))
      ),

    _parameter_array: ($) =>
      seq(repeat($._attribute_list), 'params', field('type', $.type), field('name', $.identifier)),

    block: ($) => seq('{', repeat($.statement), '}'),

    arrow_expression_clause: ($) => seq('=>', $.expression),

    _function_body: ($) => choice(field('body', $.block), seq(field('body', $.arrow_expression_clause), ';'), ';'),

    _name: ($) => choice($.alias_qualified_name, $.qualified_name, $._simple_name),

    _simple_name: ($) => choice($.identifier, $.generic_name),

    qualified_name: ($) => prec(PREC.DOT, seq(field('qualifier', $._name), '.', field('name', $._simple_name))),

    predefined_type: () =>
      token(
        choice(
          'bool',
          'byte',
          'char',
          'decimal',
          'double',
          'float',
          'int',
          'long',
          'object',
          'sbyte',
          'short',
          'string',
          'uint',
          'ulong',
          'ushort',
          'nint',
          'nuint',
          'void'
        )
      ),

    // Right-associative so that a parameter's `ref int x` keeps `ref` as a modifier instead of reducing a ref_type.
    _identifier_token: () =>
      token(
        seq(
          optional('@'),
          /(\p{XID_Start}|_|\\u[0-9A-Fa-f]{4}|\\U[0-9A-Fa-f]{8})(\p{XID_Continue}|\\u[0-9A-Fa-f]{4}|\\U[0-9A-Fa-f]{8})*/u
        )
      ),
    identifier: ($) => choice($._identifier_token, $._reserved_identifier),

    _reserved_identifier: () =>
      choice(
        prec(-1, '_'),
        'alias',
        'async',
        'ascending',
        'by',
        'descending',
        'equals',
        // attribute_target_specifier keywords — contextual only when followed
        // by `:` in `[target: Attr]` position. Anywhere else they're
        // identifiers. Without listing them here the LR table preferred the
        // literal-keyword interpretation, breaking `[type]`, `[field]`, etc.
        // as collection_expression elements. Excludes `'event'` and `'return'`
        // from the attribute_target_specifier choice — those are real C#
        // keywords and must not be accepted as identifiers anywhere else.
        'field',
        'file',
        'from',
        'global',
        'group',
        'into',
        'join',
        'let',
        'method',
        'notnull',
        'on',
        'orderby',
        'param',
        'partial',
        'property',
        'scoped',
        'select',
        'type',
        'typevar',
        'unmanaged',
        'var',
        'when',
        'where',
        'yield'
      ),

    ...preprocIf(
      '_in_method_signature',
      ($) => choice($.method_signature, alias($.preproc_if_in_method_signature, $.preproc_if)),
      0,
      false,
      true
    ),
    ...preprocIf('', ($) => $.declaration),
    ...preprocIf('_in_top_level', ($) => choice($._top_level_item_no_statement, $.statement)),
    ...preprocIf('_in_expression', ($) => $.expression, -2, false),
    ...preprocIf('_in_enum_member_declaration', ($) => $.enum_member_declaration, 0, false),
    ...preprocIf('_in_attribute_list', ($) => $.attribute_list, -1, false),
